# snowvue

./: .gitignore  Task_estimation.csv  point.txt  test.py
backend/health_app/: build.sh  demo_test_case.py.py  manage.py  privatekey.pem  publickey509.pem  pyproject.toml  pytest.ini  requirements.txt
backend/health_app/health/: admin.py  models.py  serializers.py  urls.py  views.py
backend/health_app/health/migrations/: 0001_initial.py  0002_alter_userhealthprofile_modified.py  0003_contract.py  0004_contract_expiry_time.py  0005_contractrecipient.py  0006_alter_userhealthprofile_blood_pressure.py  0007_rename_owner_contract_seller_and_more.py  0008_remove_contract_price_contractrecipient_price.py  0009_alter_contractrecipient_contract_secret.py  0010_contractrecipient_is_purchased.py  0011_contractrecipient_data_file.py  0012_alter_contractrecipient_data_file.py  0013_remove_contractrecipient_data_file_and_more.py  0014_userhealthprofile_bmi_percentile_and_more.py  0015_userhealthprofile_is_bmi_percentile_selling_and_more.py  (+1 more)
backend/health_app/health_backend_app/: asgi.py  custom_permission.py  exceptions.py  service.py  settings.py  urls.py  wsgi.py
backend/health_app/notification/: consumers.py  models.py  serializers.py  urls.py  views.py
backend/health_app/smart_contract/: snowvue_asset.optimized.wasm  snowvue_asset.wasm
backend/health_app/user/: custom_pagination.py  manager.py  models.py  serializers.py  service.py  urls.py  user_cache.py  views.py
backend/health_app/wallet/: models.py  serializers.py  service.py  views.py
(+65 files in other folders)
